# uoh-ay26-buggraph-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: gemini_agent_result.json  graph.json
docs/: PLAN_PRD.md  TODO.md  WORKLOG.md
fixed/broken-python/mathsquiz/: mathsquiz-step1.py  mathsquiz-step2.py  mathsquiz-step3.py  mathsquiz.py  quiz_core.py
obsidian/: agent-workflow.md  architecture.md  bug-investigation.md  extensions.md  token-efficiency.md
reports/: BUG_ANALYSIS.md  GEMINI_AGENT_REPORT.md  GRAPH_REPORT.md  OPTIMIZATION_REPORT.md  TOKEN_EFFICIENCY.md
src/gaphify_re/: cli.py  gemini_agent.py
tests/: test_broken_python_fixed.py  test_gemini_agent.py  test_grphify_and_crewai.py
